--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
       <h2>Contact Me</h2>
       <p>Email: uttaravimala.c1106@gmail.com</p>
       <p>Phone: +91 9382340222</p>
+      <a href="./Uttara Resume.pdf" download="Uttara_C_Resume" class="download-button">
+        <button>Download Resume</button>
+      </a>
     </div>
   </section>
 
